TestCases/Errors/range_value/observations/aut_03_obs.spm
 obs   17-5   0 
 obs   14-6   0.000252620942276115 
 obs   15-6   0.000596087892453651 
 obs   16-6   0.00109705795770043 
 obs   17-6   0.00038329402123502 
 obs   18-6   0.000217727748276629 
 obs   14-7   0.000294290759270159 
 obs   15-7   0.000346109250593258 
 obs   16-7   0.000428527147761797 
 obs   17-7   0.000366643626641492 
 obs   19-7   0 
 obs   20-7   0 
 obs   15-8   0.00128589798542649 
 obs   19-11   0 
 obs   11-12   0.00472738733060195 
 obs   12-12   0.00472738733060195 
 obs   18-12   0 
 obs   19-12   0 
 obs   18-13   0 
 obs   19-14   0 
 obs   19-15   0 
 obs   12-18   0.04204726438691 
 obs   8-19   0.0129640542133176 
 obs   10-19   0.0137693631669535 
 obs   11-19   0.0349395731502668 
 obs   12-19   0.04204726438691 
 obs   8-20   0.015440737552217 
 obs   9-20   0.0439121517423261 
 obs   10-20   0.0312007563819729 
 obs   11-20   0.036563131946543 
 obs   8-21   0.0202072538860104 
 obs   9-21   0.0387367087742279 
 obs   10-21   0.0364868269398693 
 obs   9-22   0.0372736303745769 
 obs   10-22   0.0439878280292472 
 error_value   17-5   0 
 error_value   14-6   0 
 error_value   15-6   0 
 error_value   16-6   0 
 error_value   17-6   0 
 error_value   18-6   0 
 error_value   14-7   0 
 error_value   15-7   0 
 error_value   16-7   0 
 error_value   17-7   0 
 error_value   19-7   0 
 error_value   20-7   0 
 error_value   15-8   0 
 error_value   19-11   0 
 error_value   11-12   0 
 error_value   12-12   0 
 error_value   18-12   0 
 error_value   19-12   0 
 error_value   18-13   0 
 error_value   19-14   0 
 error_value   19-15   0 
 error_value   12-18   0 
 error_value   8-19   0 
 error_value   10-19   0 
 error_value   11-19   0 
 error_value   12-19   0 
 error_value   8-20   0 
 error_value   9-20   0 
 error_value   10-20   0 
 error_value   11-20   0 
 error_value   8-21   0 
 error_value   9-21   0 
 error_value   10-21   0 
 error_value   9-22   0 
 error_value   10-22   0 
